# SuperYou

./: .gitignore  main.py  pyproject.toml  测试案件.json
SampleData/: output.json  output.md
benchmark/: 01-事实型题目.md  02-证据集合型题目.md  03-冲突缺口型题目.md  README.md  SCHEMA.md  __init__.py  schema.json  test_runner.py
benchmark/questions/: conflict_gap.json  evidence_set.json  fact_exact.json
docs/: 01-需求总结.md  02-核心功能模块.md  03-辅助功能模块.md  04-MVP功能清单.md  05-产品迭代路线图.md  06-技术架构建议.md  07-核心业务流程.md  10-技术选型决策.md  prd.md  rag-讯问-询问笔录.md  刑事案件AI分析产品需求文档.md
superyou-criminal-defense/.claude/: settings.local.json
superyou-criminal-defense/.opencode/command/: speckit.plan.md
superyou-criminal-defense/.specify/memory/: constitution.md
superyou-criminal-defense/docs/: 01_市场调研报告.md  02_MVP计划.md  03_MVP功能清单.md  04_产品PRD.md  05_实施建议.md  06_可行性总结.md  07_RAG技术调研报告_最终版.md  07_RAG技术调研报告模板.md  07_RAG技术调研需求.md  08_技术选型后行动计划.md  09_系统架构设计详细方案.md  README.md
